--- a/MODELS/MODELS.csproj
+++ b/MODELS/MODELS.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Config/" />
     <Folder Include="Entities/" />
     <Folder Include="Interfaces/" />
   </ItemGroup>
